btools: Strip libpthread dep for usr.bin/sort.
This is one in particular was annoying me for long. It has a potential of using
ptreads for sorting speed up. Running parallel sort(1) in various buildworld
places actually can result in less performance on maximum parallel builds due
to interference with other cpu cores and we can not be sure about the state of
host's static libpthread lib. Also, so far I did not noticed any performance
degradation when sort is used without threads support for buildworld purposes.
This utility (in btools case) is compiled statically so bringing whole pthreads
static lib into memory has a bigger penalty then in most cases sorting anyway.
This a single btools/ctools case that depends on -lpthread. Having a slim,
more stable buildings tools is prefered than dubious compilation speed
enhancements for critical buildworld infrastructure.

The libmd.a dependency will be revemoved in separate patch.

--- a/usr.bin/sort/Makefile
+++ b/usr.bin/sort/Makefile
@@ -9,13 +9,16 @@ SRCS=	bwstring.c \
 	sort.c \
 	vsort.c
 
+CFLAGS+= -DWITHOUT_NLS
+
 DPADD=	${LIBMD}
 LDADD=	-lmd
 
+.if !defined(BOOTSTRAPPING)
 DPADD+=	${LIBPTHREAD}
 LDADD+=	-lpthread
 CFLAGS+= -DSORT_THREADS
-CFLAGS+= -DWITHOUT_NLS
+.endif
 
 # XXX sys/md5.h shim errata for bootstrap REMOVE_OPENSSL_FILES
 CFLAGS+= -I${_SHLIBDIRPREFIX}/usr/include/priv
