btools: Strip host lib deps for bin/cpdup.
Disable last libmd.a user in btools.
MD5 functionality (cpdup -m) for buildworld is redundant.

--- a/bin/cpdup/Makefile
+++ b/bin/cpdup/Makefile
@@ -6,6 +6,10 @@ CFLAGS += -D_ST_FLAGS_PRESENT_=1
 WARNS?=	6
 .endif
 
+.if defined(BOOTSTRAPPING)
+# For boostrapping buildworld the md5 functionality is not needed
+CFLAGS+=-DNOMD5
+.else
 .if !defined(NOMD5)
 SRCS+=	md5.c
 .endif
@@ -15,6 +19,7 @@ CFLAGS+= -I${_SHLIBDIRPREFIX}/usr/include/priv
 
 LDADD+= -lmd
 DPADD+= ${LIBMD}
+.endif
 
 .include <bsd.prog.mk>
 
