btools: Strip libmd dep for usr.bin/sort.
Implement SORT_RANDOM option and do not use if BOOTSTRAPPING.
This option is useless for a buildworld/buildkernel.

This allows to have sort(1) that only depends on libc.

--- a/usr.bin/sort/Makefile
+++ b/usr.bin/sort/Makefile
@@ -11,16 +11,17 @@ SRCS=	bwstring.c \
 
 CFLAGS+= -DWITHOUT_NLS
 
+.if !defined(BOOTSTRAPPING)
 DPADD=	${LIBMD}
 LDADD=	-lmd
+CFLAGS+= -DSORT_RANDOM
 
-.if !defined(BOOTSTRAPPING)
 DPADD+=	${LIBPTHREAD}
 LDADD+=	-lpthread
 CFLAGS+= -DSORT_THREADS
-.endif
 
 # XXX sys/md5.h shim errata for bootstrap REMOVE_OPENSSL_FILES
 CFLAGS+= -I${_SHLIBDIRPREFIX}/usr/include/priv
+.endif
 
 .include <bsd.prog.mk>
