--- a/games/Makefile
+++ b/games/Makefile
@@ -1,11 +1,11 @@
 #	@(#)Makefile	8.2 (Berkeley) 3/31/94
 # $FreeBSD: src/games/Makefile,v 1.16 1999/08/27 23:28:45 peter Exp $
 
-# XXX missing: chess ching monop [copyright]
 SUBDIR= adventure \
 	arithmetic \
 	atc \
 	backgammon \
+	banner \
 	battlestar \
 	bcd \
 	bs \
