--- a/Makefile_upgrade.inc
+++ b/Makefile_upgrade.inc
@@ -3306,6 +3306,7 @@ TO_REMOVE+=/usr/share/man/man1/dgst.1.gz
 TO_REMOVE+=/usr/share/man/man1/dhparam.1.gz
 TO_REMOVE+=/usr/share/man/man1/dsa.1.gz
 TO_REMOVE+=/usr/share/man/man1/dsaparam.1.gz
+TO_REMOVE+=/usr/share/man/man1/dss1.1.gz
 TO_REMOVE+=/usr/share/man/man1/ec.1.gz
 TO_REMOVE+=/usr/share/man/man1/ecparam.1.gz
 TO_REMOVE+=/usr/share/man/man1/enc.1.gz
@@ -3313,6 +3314,9 @@ TO_REMOVE+=/usr/share/man/man1/errstr.1.gz
 TO_REMOVE+=/usr/share/man/man1/gendsa.1.gz
 TO_REMOVE+=/usr/share/man/man1/genpkey.1.gz
 TO_REMOVE+=/usr/share/man/man1/genrsa.1.gz
+TO_REMOVE+=/usr/share/man/man1/md2.1.gz
+TO_REMOVE+=/usr/share/man/man1/md4.1.gz
+TO_REMOVE+=/usr/share/man/man1/mdc2.1.gz
 TO_REMOVE+=/usr/share/man/man1/nseq.1.gz
 TO_REMOVE+=/usr/share/man/man1/ocsp.1.gz
 TO_REMOVE+=/usr/share/man/man1/pkcs12.1.gz
@@ -3323,17 +3327,23 @@ TO_REMOVE+=/usr/share/man/man1/pkeyparam.1.gz
 TO_REMOVE+=/usr/share/man/man1/pkeyutl.1.gz
 TO_REMOVE+=/usr/share/man/man1/rand.1.gz
 TO_REMOVE+=/usr/share/man/man1/req.1.gz
+TO_REMOVE+=/usr/share/man/man1/ripemd160.1.gz
 TO_REMOVE+=/usr/share/man/man1/rsa.1.gz
 TO_REMOVE+=/usr/share/man/man1/rsautl.1.gz
 TO_REMOVE+=/usr/share/man/man1/s_client.1.gz
 TO_REMOVE+=/usr/share/man/man1/s_server.1.gz
 TO_REMOVE+=/usr/share/man/man1/s_time.1.gz
 TO_REMOVE+=/usr/share/man/man1/sess_id.1.gz
+TO_REMOVE+=/usr/share/man/man1/sha.1.gz
+TO_REMOVE+=/usr/share/man/man1/sha224.1.gz
+TO_REMOVE+=/usr/share/man/man1/sha384.1.gz
+TO_REMOVE+=/usr/share/man/man1/sha512.1.gz
 TO_REMOVE+=/usr/share/man/man1/smime.1.gz
 TO_REMOVE+=/usr/share/man/man1/speed.1.gz
 TO_REMOVE+=/usr/share/man/man1/spkac.1.gz
 TO_REMOVE+=/usr/share/man/man1/ts.1.gz
 TO_REMOVE+=/usr/share/man/man1/tsget.1.gz
+TO_REMOVE+=/usr/share/man/man1/verify.1.gz
 TO_REMOVE+=/usr/share/man/man1/version.1.gz
 TO_REMOVE+=/usr/share/man/man1/x509.1.gz
 TO_REMOVE+=/usr/share/man/man5/config.5.gz
