Bring in OpenBSD's boggle(6).
As per README, stuff is addictive!

Pointed-by: Thierry
Taken-from: OpenBSD

--- a/etc/mtree/BSD.usr.dist
+++ b/etc/mtree/BSD.usr.dist
@@ -263,6 +263,8 @@
         games
             atc
             ..
+            boggle
+            ..
             fortune
             ..
             larn
