Remove the NO_CRYPT build option.
It has been broken for a long time without anyone complaining about and
we don't want to maintain it either.

In-discussion-with: zrj

--- a/etc/Makefile
+++ b/etc/Makefile
@@ -39,12 +39,7 @@ BIN1+=	manpath.config
 BIN1+=	${.CURDIR}/../gnu/usr.bin/man/manpath/manpath.config
 .endif
 
-.if !defined(NO_CRYPT)
-DIRS+=	lib/libssh \
-	usr.bin/openssl \
-	usr.bin/ssh \
-	usr.sbin/sshd
-.endif
+DIRS+=	lib/libssh usr.bin/openssl usr.bin/ssh usr.sbin/sshd
 
 # Files that should be installed read-only-executable (555) root:wheel
 #
