--- a/sbin/Makefile
+++ b/sbin/Makefile
@@ -9,6 +9,7 @@ SUBDIR=	adjkerntz \
 	ccdconfig \
 	clri \
 	comcontrol \
+	cryptdisks \
 	devattr \
 	devd \
 	devfsctl \
@@ -30,7 +31,7 @@ SUBDIR=	adjkerntz \
 	growfs \
 	gpt \
 	hammer \
-	${_hammer2} \
+	hammer2 \
 	ifconfig \
 	init \
 	ip6fw \
@@ -53,7 +54,7 @@ SUBDIR=	adjkerntz \
 	mount_dirfs \
 	mount_ext2fs \
 	mount_hammer \
-	${_mount_hammer2} \
+	mount_hammer2 \
 	mount_hpfs \
 	mount_msdos \
 	mount_nfs \
@@ -68,7 +69,7 @@ SUBDIR=	adjkerntz \
 	newbtconf \
 	newfs \
 	newfs_hammer \
-	${_newfs_hammer2} \
+	newfs_hammer2 \
 	newfs_msdos \
 	nfsd \
 	nfsiod \
@@ -94,6 +95,7 @@ SUBDIR=	adjkerntz \
 	swapon \
 	sysctl \
 	svc \
+	tcplay \
 	tunefs \
 	udevd \
 	umount \
@@ -112,17 +114,6 @@ SUBDIR+= ${MACHINE}
 .endif
 .if exists(${.CURDIR}/${MACHINE_ARCH})
 SUBDIR+= ${MACHINE_ARCH}
-.endif
-
-.if !defined(NO_CRYPT)
-SUBDIR+=cryptdisks \
-	tcplay
-
-# include hammer2 utilities (requires LibreSSL/OpenSSL)
-#
-_mount_hammer2= mount_hammer2
-_newfs_hammer2=	newfs_hammer2
-_hammer2=	hammer2
 .endif
 
 # maximum parallelism
