--- a/tools/tools/net80211/Makefile
+++ b/tools/tools/net80211/Makefile
@@ -1,10 +1,6 @@
 #	$FreeBSD: src/tools/tools/net80211/Makefile,v 1.6 2009/01/12 22:50:55 sam Exp $
 
-SUBDIR=	stumbler wesside wlaninject wlanstats wlantxtime wlanwatch wlanwds
-
-.if !defined(NO_CRYPT)
-SUBDIR+= w00t
-.endif
+SUBDIR=	stumbler wesside wlaninject wlanstats wlantxtime wlanwatch wlanwds w00t
 
 # maximum parallelism
 #
