--- a/gnu/sbin/Makefile
+++ b/gnu/sbin/Makefile
@@ -1,10 +1,6 @@
 # $FreeBSD: src/gnu/usr.bin/Makefile,v 1.51 2000/01/16 00:11:34 obrien Exp $
 
-SUBDIR= dmsetup lvm
-
-.if !defined(NO_CRYPT)
-SUBDIR+= cryptsetup
-.endif
+SUBDIR=	cryptsetup dmsetup lvm
 
 # maximum parallelism
 #
