--- a/Makefile_upgrade.inc
+++ b/Makefile_upgrade.inc
@@ -3349,6 +3349,8 @@ TO_REMOVE+=/usr/share/man/man1/x509.1.gz
 TO_REMOVE+=/usr/share/man/man5/config.5.gz
 TO_REMOVE+=/usr/share/man/man5/x509v3_config.5.gz
 TO_REMOVE+=/usr/include/panel.h
+TO_REMOVE+=/usr/include/cpu/coredump.h
+TO_REMOVE+=/usr/include/machine/coredump.h
 
 .if !defined(WANT_INSTALLER)
 TO_REMOVE+=/usr/sbin/dfuibe_installer
