--- a/etc/autofs/Makefile
+++ b/etc/autofs/Makefile
@@ -1,11 +1,9 @@
 # $FreeBSD$
 
-FILES=		include_ldap special_hosts special_media special_noauto special_null
+FILES=		include_ldap include_nis special_hosts special_media special_noauto special_null
 
 NO_OBJ=
 FILESDIR=	/etc/autofs
-FILESMODE=	644
-FILESMODE_special_media		= 755
-FILESMODE_special_noauto	= 755
+FILESMODE=	755
 
 .include <bsd.prog.mk>
