--- a/sys/net/Makefile
+++ b/sys/net/Makefile
@@ -1,4 +1,4 @@
-SUBDIR=accf_data accf_http disc faith gif gre sl stf tap tun \
+SUBDIR=accf_data accf_http disc gif gre sl stf tap tun \
 	vlan zlib bridge lagg libalias dummynet ipfw \
 	dummynet3 ipfw3 ipfw3_basic ipfw3_nat ipfw3_layer2 ipfw3_layer4 \
 	ip6fw ip_mroute sppp pf
