fortune(6): Pre-emptive CENSORSHIP.
First let's get it straight. It is censorship and let's not sugar coat it.

The FO has fallen, N is falling and naturally we are next.
I'm only doing this to prevent certain discussions taking place on the mailing
lists or irc over the holidays and to explictly show irony of all this ${thing}.
It is SAD to see that various projects went from technical to being PC infested.
So much for being the flagmans of OSS developments & examples to other projects.
                   (slow ironic clapping insert here)
Such slabnij individuals with "hurt feelings" always are causing developers to
get distracted from their hacking on source or making hardware work properly.
Also, these actions opens up the door wider for "other" topics into discussions.

I'm not going to mention the name of certain evil* person so that this would not
get "flagged". Absurdity is already way beyond any reasonable levels. Clearly
there are some perpetually offended snoflakes, who have nothing better to do
other than look for ways to get offended or to trigger other people in real life
and over the internet. Why not just choose one? If someone wants to let some
accumulated steam off, there are places over the internet where one can have a
constructive conversation about certain topics. If you can not handle the raw,
unredacted, straight opinions, you must be new there, please kindly go back to
reddit safe spaces. Just do *not* bring those talks over into the projects!
It is very likely that not everybody feels the same or even cares.
This is literally "Look what you made me do!", so here we go.

I'm going to consider cookies removal *only* and *only* if some things are
declared illegal by the country/state law with a reference to look it up where
it clearly states what is illegal to quote (including if that applies to the
translated text variants). No "probably" stuff. Either it's illegal or it's not.
If you are not sure, you should consult with your country/state l

--- a/Makefile_upgrade.inc
+++ b/Makefile_upgrade.inc
@@ -3369,6 +3369,12 @@ TO_REMOVE+=/usr/share/installer/sources.conf
 TO_REMOVE+=/usr/share/man/man8/installer.8.gz
 .endif
 
+.if defined(INSTALL_OFFENSIVE_FORTUNES) && ${INSTALL_OFFENSIVE_FORTUNES:MNO*}
+TO_REMOVE+=/usr/share/games/fortune/fortunes-o
+TO_REMOVE+=/usr/share/games/fortune/limerick
+TO_REMOVE+=/usr/share/games/fortune/murphy-o
+.endif
+
 # Very special cases only.
 TO_REMOVE_LATE+=/lib/libcrypto.so.5
 TO_REMOVE_LATE+=/usr/lib/libssl.a
