--- a/games/backgammon/teachgammon/Makefile
+++ b/games/backgammon/teachgammon/Makefile
@@ -5,11 +5,7 @@ NOMAN=	noman
 CFLAGS+=-DTEACHGAMMON_TEXT -I${.CURDIR}/../common_source
 SRCS=	allow.c board.c check.c data.c fancy.c init.c odds.c one.c save.c \
 	subs.c table.c teach.c ttext1.c ttext2.c tutor.c
-DPADD=	${LIBNCURSES}
-LDADD=	-lprivate_ncurses
-
-CFLAGS+=	-I${_SHLIBDIRPREFIX}/usr/include/priv/ncurses
-LDFLAGS+=	${PRIVATELIB_LDFLAGS}
+GAMESCURSES=
 
 .PATH:	${.CURDIR}/../common_source
 
