--- a/games/boggle/boggle/Makefile
+++ b/games/boggle/boggle/Makefile
@@ -5,11 +5,6 @@
 PROG=	boggle
 SRCS=	bog.c help.c mach.c prtable.c timer.c word.c
 MAN=	boggle.6
-
-DPADD=	${LIBNCURSES}
-LDADD=	-lprivate_ncurses
-
-CFLAGS+=	-I${_SHLIBDIRPREFIX}/usr/include/priv/ncurses
-LDFLAGS+=	${PRIVATELIB_LDFLAGS}
+GAMESCURSES=
 
 .include <bsd.prog.mk>
