--- a/games/hangman/Makefile
+++ b/games/hangman/Makefile
@@ -4,10 +4,6 @@ PROG=	hangman
 SRCS=	endgame.c extern.c getguess.c getsym.c getword.c main.c playgame.c \
 	prdata.c prman.c prword.c setup.c
 MAN=	hangman.6
-DPADD=	${LIBNCURSES}
-LDADD=	-lprivate_ncurses
-
-CFLAGS+=	-I${_SHLIBDIRPREFIX}/usr/include/priv/ncurses
-LDFLAGS+=	${PRIVATELIB_LDFLAGS}
+GAMESCURSES=
 
 .include <bsd.prog.mk>
