--- a/games/hunt/hunt/Makefile
+++ b/games/hunt/hunt/Makefile
@@ -4,13 +4,9 @@
 PROG=	hunt
 SRCS=	connect.c hunt.c otto.c playit.c display.c list.c
 MAN=	hunt.6
-LDADD=	-lprivate_ncurses
-DPADD=	${LIBNCURSES}
+GAMESCURSES=
 
-CFLAGS+=	-I${_SHLIBDIRPREFIX}/usr/include/priv/ncurses
-LDFLAGS+=	${PRIVATELIB_LDFLAGS}
-
-CFLAGS+=-I${.CURDIR}/../huntd
+CFLAGS=	-I${.CURDIR}/../huntd
 
 .include "../../Makefile.inc"
 .include <bsd.prog.mk>
