--- a/games/rain/Makefile
+++ b/games/rain/Makefile
@@ -3,10 +3,6 @@
 
 PROG=	rain
 MAN=	rain.6
-DPADD=	${LIBNCURSES}
-LDADD=	-lprivate_ncurses
-
-CFLAGS+=	-I${_SHLIBDIRPREFIX}/usr/include/priv/ncurses
-LDFLAGS+=	${PRIVATELIB_LDFLAGS}
+GAMESCURSES=
 
 .include <bsd.prog.mk>
