--- a/games/rogue/Makefile
+++ b/games/rogue/Makefile
@@ -6,14 +6,10 @@ MAN=	rogue.6
 SRCS=	hit.c init.c inventory.c level.c machdep.c main.c \
 	message.c monster.c move.c object.c pack.c play.c random.c ring.c \
 	room.c save.c score.c spec_hit.c throw.c trap.c use.c zap.c
-DPADD=	${LIBNCURSES}
-LDADD=	-lprivate_ncurses
+VARGAMES=
+GAMESCURSES=
 
-CFLAGS+=	-DUNIX
-CFLAGS+=	-I${_SHLIBDIRPREFIX}/usr/include/priv/ncurses
-LDFLAGS+=	${PRIVATELIB_LDFLAGS}
-
-VARGAMES=	yes
+CFLAGS=	-DUNIX
 
 beforeinstall:
 .if !exists(${DESTDIR}/var/games/rogue.scores)
