--- a/games/backgammon/backgammon/Makefile
+++ b/games/backgammon/backgammon/Makefile
@@ -6,11 +6,7 @@ CFLAGS+=-I${.CURDIR}/../common_source
 SRCS=	allow.c board.c check.c extra.c fancy.c init.c main.c move.c \
 	odds.c one.c save.c subs.c table.c text.c version.c
 MAN=	backgammon.6
-DPADD=	${LIBNCURSES}
-LDADD=	-lprivate_ncurses
-
-CFLAGS+=	-I${_SHLIBDIRPREFIX}/usr/include/priv/ncurses
-LDFLAGS+=	${PRIVATELIB_LDFLAGS}
+GAMESCURSES=
 
 .PATH:	${.CURDIR}/../common_source
 
