--- a/games/battlestar/Makefile
+++ b/games/battlestar/Makefile
@@ -7,13 +7,8 @@ SRCS=	battlestar.c command1.c command2.c command3.c command4.c \
 	init.c cypher.c getcom.c parse.c room.c save.c fly.c misc.c \
 	globals.c dayfile.c nightfile.c dayobjs.c nightobjs.c words.c
 MAN=	battlestar.6
-DPADD=	${LIBNCURSES}
-LDADD=	-lprivate_ncurses
-
-CFLAGS+=	-I${_SHLIBDIRPREFIX}/usr/include/priv/ncurses
-LDFLAGS+=	${PRIVATELIB_LDFLAGS}
-
-VARGAMES=	yes
+VARGAMES=
+GAMESCURSES=
 
 beforeinstall:
 .if !exists(${DESTDIR}/var/games/battlestar.log)
