--- a/games/colorbars/Makefile
+++ b/games/colorbars/Makefile
@@ -2,10 +2,6 @@
 
 PROG=  colorbars
 MAN=   colorbars.6
-DPADD=	${LIBNCURSES}
-LDADD=	-lprivate_ncurses
-
-CFLAGS+=	-I${_SHLIBDIRPREFIX}/usr/include/priv/ncurses
-LDFLAGS+=	${PRIVATELIB_LDFLAGS}
+GAMESCURSES=
 
 .include <bsd.prog.mk>
