--- a/games/tetris/Makefile
+++ b/games/tetris/Makefile
@@ -3,10 +3,6 @@
 PROG=	tetris
 SRCS=	input.c screen.c shapes.c scores.c tetris.c
 MAN=	tetris.6
-DPADD=	${LIBNCURSES}
-LDADD=	-lprivate_ncurses
-
-CFLAGS+=	-I${_SHLIBDIRPREFIX}/usr/include/priv/ncurses
-LDFLAGS+=	${PRIVATELIB_LDFLAGS}
+GAMESCURSES=
 
 .include <bsd.prog.mk>
