drm/linux: Fix linux/dma-mapping.h compilation...
... with the drm/i915 codebase from Linux 4.8

* Move functions from .h to .c files in order to hide their implementations

* This avoids leaking DragonFly headers to Linux code or Linux headers
  to DragonFly code with associated bad side-effects like type redefinitions

--- a/sys/dev/drm/drm/Makefile
+++ b/sys/dev/drm/drm/Makefile
@@ -48,6 +48,7 @@ SRCS	= \
 	drm_vma_manager.c \
 	linux_async.c \
 	linux_compat.c \
+	linux_dma.c \
 	linux_hdmi.c \
 	linux_i2c.c \
 	linux_hrtimer.c \
