--- a/share/man/man8/Makefile
+++ b/share/man/man8/Makefile
@@ -1,8 +1,7 @@
 #	@(#)Makefile	8.1 (Berkeley) 6/5/93
 # $FreeBSD: src/share/man/man8/Makefile,v 1.13.2.12 2002/07/16 14:05:30 ru Exp $
 
-MAN=	adding_user.8 \
-	crash.8 \
+MAN=	crash.8 \
 	dhcp.8 \
 	diskless.8 \
 	intro.8 \
