lib/libc_rtld: Fix 'make install'.
Do not install nls categories and uuid(3) manpages. These are handled by libc.

--- a/lib/libc/uuid/Makefile.inc
+++ b/lib/libc/uuid/Makefile.inc
@@ -10,6 +10,7 @@ SRCS+=	uuid_compare.c uuid_create.c uuid_create_nil.c uuid_equal.c \
 	uuid_stream.c uuid_to_string.c
 CMAPS+=	${.CURDIR}/uuid/Symbol.map
 
+.if ${LIB} == "c"
 MAN+=	uuid.3
 MLINKS+=uuid.3 uuid_addr_lookup.3
 MLINKS+=uuid.3 uuid_compare.3
@@ -26,3 +27,4 @@ MLINKS+=uuid.3 uuid_is_nil.3
 MLINKS+=uuid.3 uuid_name_lookup.3
 MLINKS+=uuid.3 uuid_reset_lookup.3
 MLINKS+=uuid.3 uuid_to_string.3
+.endif
