--- a/usr.bin/crunch/examples/fixit.conf
+++ b/usr.bin/crunch/examples/fixit.conf
@@ -14,7 +14,7 @@ srcdirs /usr/src/sbin/i386
 # /bin stuff
 
 progs cat chmod cp date dd df echo ed expr hostname kill ln ls mkdir
-progs mt mv pwd rcp rm rmdir sh sleep stty sync test
+progs mt mv pwd rm rmdir sh sleep stty sync test
 
 ln test [
 ln sh -sh		# init invokes the shell this way
@@ -28,7 +28,7 @@ ln restore rrestore
 
 # /usr/bin stuff
 
-progs ftp rsh sed telnet rlogin common find
+progs ftp sed telnet common find
 ln common vi
 ln common view
 ln common ex
