--- a/usr.bin/crunch/examples/really-big.conf
+++ b/usr.bin/crunch/examples/really-big.conf
@@ -13,7 +13,7 @@
 srcdirs /usr/src/bin
 
 progs cat chmod cp csh date dd df domainname echo ed expr hostname kill
-progs ln ls mkdir mt mv ps pwd rcp rm rmail rmdir sh sleep stty sync test
+progs ln ls mkdir mt mv ps pwd rm rmail rmdir sh sleep stty sync test
 
 ln test [
 ln sh -sh
@@ -46,7 +46,7 @@ progs ipcs join kdump ktrace last lastcomm leave lex lock logger locate
 progs login logname look m4 machine mail make man mesg mkfifo
 progs mkstr modstat more msgs netstat newsyslog nfsstat nice nm nohup
 progs pagesize passwd paste patch pr printenv printf quota ranlib
-progs renice rev rlogin rpcgen rpcinfo rsh rup ruptime rusers rwall rwho
+progs renice rev rpcgen rpcinfo rup ruptime rusers rwall rwho
 progs script sed showmount size soelim split strings strip su tail talk
 progs tcopy tee telnet tftp time tip tn3270 touch tput tr true tset tsort
 progs tty ul uname unexpand unifdef uniq units unvis users uudecode uuencode
