ftpd(8): Revert a Makefile change that was not meant to be pushed.

--- a/libexec/ftpd/Makefile
+++ b/libexec/ftpd/Makefile
@@ -20,7 +20,7 @@ LDADD+=	-lopie -lmd
 LSDIR=	../../bin/ls
 .PATH:	${.CURDIR}/${LSDIR}
 SRCS+=	ls.c cmp.c print.c util.c
-CFLAGS+=-I. -Dmain=ls_main -I${.CURDIR}/${LSDIR}
+CFLAGS+=-Dmain=ls_main -I${.CURDIR}/${LSDIR}
 DPADD+=	${LIBM}
 LDADD+=	-lm
 
