locales: Add "is_IS.ISO8859-1" locale.
Mainly for testing, we already have -15 and UTF-8 ones.

--- a/share/ctypedef/Makefile
+++ b/share/ctypedef/Makefile
@@ -117,6 +117,7 @@ SAME+=		en_US.UTF-8:ar_AE.UTF-8
 SAME+=		en_US.UTF-8:am_ET.UTF-8
 SAME+=		en_US.UTF-8:af_ZA.UTF-8
 SAME+=		en_US.ISO8859-1:pt_BR.ISO8859-1
+SAME+=		en_US.ISO8859-1:is_IS.ISO8859-1
 SAME+=		en_US.ISO8859-1:fr_CA.ISO8859-1
 SAME+=		en_US.ISO8859-1:es_MX.ISO8859-1
 SAME+=		en_US.ISO8859-1:es_AR.ISO8859-1
