--- a/share/monetdef/Makefile
+++ b/share/monetdef/Makefile
@@ -158,6 +158,7 @@ SAME+=		sv_FI.UTF-8:lt_LT.UTF-8
 SAME+=		sv_FI.UTF-8:fi_FI.UTF-8
 SAME+=		hr_HR.UTF-8:hr_HR.ISO8859-2
 SAME+=		is_IS.UTF-8:is_IS.ISO8859-15
+SAME+=		is_IS.UTF-8:is_IS.ISO8859-1
 SAME+=		sk_SK.ISO8859-2:lt_LT.ISO8859-13
 SAME+=		se_NO.UTF-8:nn_NO.UTF-8
 SAME+=		pt_BR.UTF-8:pt_BR.ISO8859-1
