--- a/etc/mtree/BSD.usr.dist
+++ b/etc/mtree/BSD.usr.dist
@@ -571,6 +571,8 @@
             ..
             hy_AM.UTF-8
             ..
+            is_IS.ISO8859-1
+            ..
             is_IS.ISO8859-15
             ..
             is_IS.UTF-8
