--- a/share/colldef/Makefile
+++ b/share/colldef/Makefile
@@ -143,6 +143,7 @@ SAME+=		hr_HR.UTF-8:hr_HR.ISO8859-2
 SAME+=		hu_HU.UTF-8:hu_HU.ISO8859-2
 SAME+=		hy_AM.UTF-8:hy_AM.ARMSCII-8
 SAME+=		is_IS.UTF-8:is_IS.ISO8859-15
+SAME+=		is_IS.UTF-8:is_IS.ISO8859-1
 SAME+=		ja_JP.UTF-8:ja_JP.SJIS
 SAME+=		ja_JP.UTF-8:ja_JP.eucJP
 SAME+=		ko_KR.UTF-8:ko_KR.eucKR
