--- a/share/msgdef/Makefile
+++ b/share/msgdef/Makefile
@@ -149,6 +149,7 @@ SAME+=		fr_FR.UTF-8:fr_CA.UTF-8
 SAME+=		fr_FR.UTF-8:fr_CA.ISO8859-1
 SAME+=		fr_FR.UTF-8:fr_BE.UTF-8
 SAME+=		fr_FR.UTF-8:fr_BE.ISO8859-15
+SAME+=		is_IS.ISO8859-15:is_IS.ISO8859-1
 SAME+=		sl_SI.UTF-8:sl_SI.ISO8859-2
 SAME+=		sl_SI.UTF-8:hr_HR.UTF-8
 SAME+=		sl_SI.UTF-8:hr_HR.ISO8859-2
