--- a/share/numericdef/Makefile
+++ b/share/numericdef/Makefile
@@ -128,6 +128,7 @@ SAME+=		tr_TR.UTF-8:it_IT.UTF-8
 SAME+=		tr_TR.UTF-8:it_IT.ISO8859-15
 SAME+=		tr_TR.UTF-8:is_IS.UTF-8
 SAME+=		tr_TR.UTF-8:is_IS.ISO8859-15
+SAME+=		tr_TR.UTF-8:is_IS.ISO8859-1
 SAME+=		tr_TR.UTF-8:hr_HR.UTF-8
 SAME+=		tr_TR.UTF-8:hr_HR.ISO8859-2
 SAME+=		tr_TR.UTF-8:fr_BE.UTF-8
