--- a/share/timedef/Makefile
+++ b/share/timedef/Makefile
@@ -162,6 +162,7 @@ SAME+=		en_ZA.UTF-8:en_ZA.US-ASCII
 SAME+=		en_ZA.UTF-8:en_ZA.ISO8859-1
 SAME+=		es_CR.UTF-8:es_AR.UTF-8
 SAME+=		eu_ES.UTF-8:eu_ES.ISO8859-15
+SAME+=		is_IS.ISO8859-15:is_IS.ISO8859-1
 SAME+=		nl_BE.UTF-8:nl_BE.ISO8859-15
 SAME+=		nl_NL.UTF-8:nl_NL.ISO8859-15
 SAME+=		sr_Latn_RS.UTF-8:sr_Cyrl_RS.UTF-8
