cal(1): Rename to use de_AT.ISO8859-15 calendar.

--- a/etc/mtree/BSD.usr.dist
+++ b/etc/mtree/BSD.usr.dist
@@ -123,7 +123,7 @@
     ..
     share
         calendar
-            de_AT.ISO_8859-15
+            de_AT.ISO8859-15
             ..
             de_DE.ISO8859-1
             ..
