--- a/usr.bin/calendar/Makefile
+++ b/usr.bin/calendar/Makefile
@@ -5,7 +5,7 @@ PROG=	calendar
 SRCS=	calendar.c io.c day.c ostern.c paskha.c
 
 .if !defined(NO_SHARE)
-INTER=          de_AT.ISO_8859-15 de_DE.ISO8859-1 fr_FR.ISO8859-1 \
+INTER=		de_AT.ISO8859-15 de_DE.ISO8859-1 fr_FR.ISO8859-1 \
 		hr_HR.ISO8859-2 hu_HU.ISO8859-2 \
 		ru_RU.KOI8-R uk_UA.KOI8-U
 DE_LINKS=       de_DE.ISO8859-15
@@ -18,7 +18,7 @@ beforeinstall:
 .for lang in ${INTER}
 	${INSTALL} -o ${BINOWN} -g ${BINGRP} -m ${TEXTMODE} \
 		${.CURDIR}/calendars/${lang}/calendar.* \
-		${DESTDIR}${SHAREDIR}/calendar/${lang} 
+		${DESTDIR}${SHAREDIR}/calendar/${lang}
 .endfor
 .for link in ${DE_LINKS}
 	rm -rf ${DESTDIR}${SHAREDIR}/calendar/${link}
